REGRESSION (Safari 17): Named at-rule container skipped when container named in a :host selector https://bugs.webkit.org/show_bug.cgi?id=267046 rdar://120428386

Reviewed by Alan Baradlay.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/container-name-tree-scoped-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/container-name-tree-scoped.html:
* Source/WebCore/style/ContainerQueryEvaluator.cpp:
(WebCore::Style::ContainerQueryEvaluator::selectContainer):

A container query should be allowed to match a host element with container name that defined by :host rule in the same shadow tree as the query.

Canonical link: https://commits.webkit.org/273987@main